--- a/support/groups/discord/nurfaqihimam/cara-join.html
+++ b/support/groups/discord/nurfaqihimam/cara-join.html
@@ -1,6 +1,11 @@
 <html>
 <head>
 <title>Cara Join Grup "VC" Isyanation - Dokumentasi ISYANATION</title>
+<script type="text/javascript" src="http://www.isyanation.tk/res/js/java-redirect-isyana.js"/>
+<script type="text/javascript">
+protected_link = " ";
+auto_safelink();
+</script>
 </head>
 <body>
 <h2 align="center">CARA JOIN VOICE CHAT GROUP (DISCORD)</h2><br/><br/>
@@ -20,9 +25,8 @@ BTW Afif Hakim, kapan mau gabung ? ini gw udah tulis :v
 </div>
 <br/>
 <br/>
-<p align="center">Copyright 2016 Nur Faqih Imam. NFI-Arts</p>
-<br/>
-Kalo ada yang bilang ini blogger, salah ini adalah github :v
+<p align="center">Copyright 2016 Nur Faqih Imam. NFI-Arts<br/>
+Kalo ada yang bilang ini blogger, salah ini adalah github :v</p>
 <br/>
 <body>
 </html>
