--- a/support/groups/discord/nurfaqihimam/cara-join.html
+++ b/support/groups/discord/nurfaqihimam/cara-join.html
@@ -10,7 +10,7 @@ auto_safelink();
 <body>
 <h2 align="center">CARA JOIN VOICE CHAT GROUP (DISCORD)</h2><br/><br/>
 <a href="#update09aug">Update artikel 09 Agustus 2016</a>
-<div id="tutorial-body" align="left">
+<div id="tutorial-body" align="center">
 1. Download app discord : <a href="https://play.google.com/store/apps/details?id=com.discord">Klik disini</a> Lalu register/daftar di <a href="https://discordapp.com/register">disini</a>.<br/>
 2. Install discord. <br/>
 3. Buka & Login discord. </br>
@@ -25,22 +25,22 @@ Gimana ? Gak terlalu ribetkan ? :D <br/>
 BTW Afif Hakim, kapan mau gabung ? ini gw udah tulis :v
 </div>
 <br/>
-<div class="09aug" name="update09aug">
+<div class="09aug" align="center" name="update09aug">
   <h2>UPDATE Artikel, 09 Agustus 2016</h2><br/><br/>
   Setelah saya lihat postingan saya di Grup Isyanation di Facebook, ternyata banyak orang yang belum faham & gagal saat mau join grup. <br/>
-  Untuk yang belum tahu apa itu discord, Discord adalah sebuah app jenis gamer communicator yang berbasis voice chat group. <br/>
+  Untuk yang belum tahu apa itu discord, Discord adalah sebuah app jenis gamer communicator yang berbasis voice chat group. <br/><br/>
   Apa itu voice chat group ?<br/>
   Voice chat group adalah, grup dimana kita bisa komuikasi dengan anggota lain dengan cara berbicara. <br/>
-  Apa cuma bisa berbicara saja ? Dalam bentuk teks gak ada  ?<br/>
+  Apa cuma bisa berbicara saja ? Dalam bentuk teks gak ada  ?<br/><br/>
   Discord menyediakan 2 macam bentuk komunikasi, yaitu Voice Chat & Text Chat. Kalian bisa ngomong & nulis di chat bersamaan (bisa facebook-an sambil ngomong)<br/>
-  Gak bisa buka play store, Ada solusi ?<br/>
-  Saya sudah menemukan link untuk app ini (third-party), Download <a href="https://appraw.com/dl/FbHHgL14HD/arc2jk7j">disini</a><br/>
+  Gak bisa buka play store, Ada solusi ?<br/><br/>
+  Saya sudah menemukan link untuk app ini (third-party), Download <a href="https://appraw.com/dl/FbHHgL14HD/arc2jk7j">disini</a><br/><br/>
   Gak bisa join, Error "code expired"<br/>
-  Untuk itu, silahkan kirim pesan ke saya via <a href="https://facebook.com/nfiarts">Facebook</a><br/>
+  Untuk itu, silahkan kirim pesan ke saya via <a href="https://facebook.com/nfiarts">Facebook</a><br/><br/>
   Ada pertanyaan lain ? Kalau ada kirimkan pesan ke saya via facebook :D
 </div>
 <br/>
-<p align="center">Copyright 2016 Nur Faqih Imam. NFI-Arts<br/>
+<p id="copyright" align="center">Copyright 2016 Nur Faqih Imam. NFI-Arts<br/>
 Kalo ada yang bilang ini blogger, salah ini adalah github :v</p>
 </body>
 </html>
