--- a/support/groups/discord/nurfaqihimam/cara-join.html
+++ b/support/groups/discord/nurfaqihimam/cara-join.html
@@ -9,7 +9,7 @@ auto_safelink();
 </head>
 <body>
 <h2 align="center">CARA JOIN VOICE CHAT GROUP (DISCORD)</h2><br/><br/>
-<a href="#update09aug">Update artikel 09 Agustus 2016</a>
+Update artikel 09 Agustus 2016, Scroll ke paling bawah :D 
 <div id="tutorial-body" align="center">
 1. Download app discord : <a href="https://play.google.com/store/apps/details?id=com.discord">Klik disini</a> Lalu register/daftar di <a href="https://discordapp.com/register">disini</a>.<br/>
 2. Install discord. <br/>
@@ -17,7 +17,8 @@ auto_safelink();
 4. Buka sidebar (tombol strip 3 yang ada di kiri layar). <br/> <img src="img/ss1.png"/><br/>
 5. Tekan tanda + (Plus) di layar. <br/><img src="img/ss2.png"/><br/>
 6. Masukkan kode "https://discord.gg/nVVnrpx" di kotak Join a Server lalu tekan Join. <br/><img src="img/ss3.png"/><br/>
-7. Selamat! Kamu sudah masuk ke grup, untuk mulai bicara silahkan tekan sidebar lagi lalu pilih suaraisyanation dan harus terhubung. <br/><img src="img/ss4.png"/><br/>
+7. Selamat! Kamu sudah masuk ke grup, untuk mulai bicara silahkan tekan sidebar lagi lalu masuk suaraisyanation dan terus terhubung (jangan matikan koneksi internet).
+<br/><img src="img/ss4.png"/><br/>
 8. Untuk mengecek siapa saja yang online, silahkan tarik layar kekanan. <br/><img src="img/ss5.png"/><br/>
 <br/>
 <br/>
