--- a/support/groups/discord/nurfaqihimam/cara-join.html
+++ b/support/groups/discord/nurfaqihimam/cara-join.html
@@ -9,14 +9,14 @@ auto_safelink();
 </head>
 <body>
 <h2 align="center">CARA JOIN VOICE CHAT GROUP (DISCORD)</h2><br/><br/>
-Update artikel 09 Agustus 2016, Scroll ke paling bawah :D 
+<center>Update artikel 09 Agustus 2016, Scroll ke paling bawah :D</center> 
 <div id="tutorial-body" align="center">
 1. Download app discord : <a href="https://play.google.com/store/apps/details?id=com.discord">Klik disini</a> Lalu register/daftar di <a href="https://discordapp.com/register">disini</a>.<br/>
 2. Install discord. <br/>
 3. Buka & Login discord. </br>
 4. Buka sidebar (tombol strip 3 yang ada di kiri layar). <br/> <img src="img/ss1.png"/><br/>
 5. Tekan tanda + (Plus) di layar. <br/><img src="img/ss2.png"/><br/>
-6. Masukkan kode "https://discord.gg/nVVnrpx" di kotak Join a Server lalu tekan Join. <br/><img src="img/ss3.png"/><br/>
+6. Masukkan kode "https://discord.gg/nVVnrpx" di kotak Join a Server lalu tekan Join(Yang tidak bisa join, silahkan scroll ke <a href="#update09aug">bawah</a>). <br/><img src="img/ss3.png"/><br/>
 7. Selamat! Kamu sudah masuk ke grup, untuk mulai bicara silahkan tekan sidebar lagi lalu masuk suaraisyanation dan terus terhubung (jangan matikan koneksi internet).
 <br/><img src="img/ss4.png"/><br/>
 8. Untuk mengecek siapa saja yang online, silahkan tarik layar kekanan. <br/><img src="img/ss5.png"/><br/>
@@ -26,7 +26,7 @@ Gimana ? Gak terlalu ribetkan ? :D <br/>
 BTW Afif Hakim, kapan mau gabung ? ini gw udah tulis :v
 </div>
 <br/>
-<div class="09aug" align="center" name="update09aug">
+<div class="09aug" align="center" name="#update09aug">
   <h2>UPDATE Artikel, 09 Agustus 2016</h2><br/><br/>
   Setelah saya lihat postingan saya di Grup Isyanation di Facebook, ternyata banyak orang yang belum faham & gagal saat mau join grup. <br/>
   Untuk yang belum tahu apa itu discord, Discord adalah sebuah app jenis gamer communicator yang berbasis voice chat group. <br/><br/>
