--- a/index.html
+++ b/index.html
@@ -507,6 +507,14 @@
 
     <!-- Theme JavaScript -->
     <script src="js/main.min.js"></script>
+    
+    <!--HTTPS Redirect-->
+    <script type="text/javascript">function halaman_https
+{
+	if window.location.href("http://www.isyanation.tk");
+	then
+	window.location.href("https://www.isyanation.tk");
+}</script>
 
 </body>
 
