--- a/index.html
+++ b/index.html
@@ -257,7 +257,7 @@
                             </li>
                         </ul>
                     </div>
-                    <div class="footer-col col-md-4">
+                    <div id="aboutme" class="footer-col col-md-4">
                         <h3>Nur Faqih Imam</h3>
                         <p>Hanya seorang pemuda yang bisa melakukan hal" yang luar biasa.</p>
                     </div>
@@ -268,7 +268,7 @@
             <div class="container">
                 <div class="row">
                     <div class="col-lg-12">
-                        <p> ISYANATION &copy; 2016
+                        <p> ISYANATION &copy; 2016</p>
                     </div>
                 </div>
             </div>
