--- a/index.html
+++ b/index.html
@@ -59,6 +59,9 @@
                     <li class="page-scroll">
                         <a href="#contact">Kontak</a>
                     </li>
+                    <li class="page-scroll">
+                    	<a href="https://blog.isyanation.tk">Blog</a>
+                    </li>
                 </ul>
             </div>
             <!-- /.navbar-collapse -->
