--- a/index.html
+++ b/index.html
@@ -10,6 +10,9 @@
     <meta name="author" content="Nur Faqih Imam">
 
     <title>ISYANATION</title>
+    
+    <!-- Favicon -->
+    <link href="/favicon.png" rel="shorcut icon" />
 
     <!-- Bootstrap Core CSS -->
     <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
