--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <title>ISYANATION</title>
     
     <!-- Favicon -->
-    <link href="/favicon.png" rel="shorcut icon" />
+    <link href="/favicon.ico" rel="shorcut icon" />
 
     <!-- Bootstrap Core CSS -->
     <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
