--- a/index.html
+++ b/index.html
@@ -11,6 +11,38 @@
 
     <title>ISYANATION</title>
     
+    <!-- Meta Tag yang Sangat Tampan -->
+<meta content='isyanation, isyana sarasvati, isyana, sarasvati, facebook, twitter, youtube, instagram, tetap dalam jiwa, keep being you' name='keywords'/>
+<meta content='Index, Follow' name='robots'/>
+<meta content='© 2016 NFI-Arts Networks' name='copyright'/>
+<meta content='2 days' name='revisit'/>
+<meta content='never' name='expires'/>
+<meta content='2 days' name='revisit-after'/>
+<meta content='Indonesia' name='geo.placename'/>
+<meta content='ID' name='language'/>
+<meta content='ID' name='geo.country'/>
+<meta content='All-Language' http-equiv='Content-Language'/>
+<meta content='global' name='distribution'/>
+<meta content='blogger' name='generator'/>
+<meta content='general' name='rating'/>
+<meta content='global' name='target'/>
+<meta content='true' name='MSSmartTagsPreventParsing'/>
+<meta content='text/html; charset=UTF-8' http-equiv='Content-Type'/>
+<meta content='index, follow' name='googlebot'/>
+<meta content='follow, all' name='Googlebot-Image'/>
+<meta content='follow, all' name='msnbot'/>
+<meta content='follow, all' name='Slurp'/>
+<meta content='follow, all' name='ZyBorg'/>
+<meta content='follow, all' name='Scooter'/>
+<meta content='all' name='spiders'/>
+<meta content='all' name='WEBCRAWLERS'/>
+<meta content='noodp' name='robots'/>
+<meta content='noydir' name='robots'/>
+<link href='https://www.isyanation.tk' rel='canonical'/> 
+<meta content='aeiwi, alexa, alltheWeb, altavista, aol netfind, anzwers, canada, directhit, euroseek, excite, overture, go, google, hotbot. infomak, kanoodle, lycos, mastersite, national directory, northern light, searchit, simplesearch, Websmostlinked, webtop, what-u-seek, aol, yahoo, webcrawler, infoseek, excite, magellan, looksmart, bing, cnet, googlebot' name='search engines'/>
+
+
+    
     <!-- Favicon -->
     <link rel="shortcut icon" href="/favicon.ico" type="image/x-icon" />
 
