--- a/index.html
+++ b/index.html
@@ -232,7 +232,7 @@
                 <div class="col-lg-8 col-lg-offset-2">
                     <!-- To configure the contact form email address, go to mail/contact_me.php and update the email address in the PHP file on line 19. -->
                     <!-- The form should work on most web servers, but if the form is not working you may need to configure your web server differently. -->
-                    <form name="sentMessage" id="contactForm" novalidate>
+                    <form name="sentMessage" id="contactForm" action="https://formspree.io/nfiarts@gmail.com" novalidate>
                         <div class="row control-group">
                             <div class="form-group col-xs-12 floating-label-form-group controls">
                                 <label>Nama</label>
@@ -265,7 +265,7 @@
                         <div id="success"></div>
                         <div class="row">
                             <div class="form-group col-xs-12">
-                                <button type="submit" class="btn btn-success btn-lg">Kirim</button>
+                                <button type="submit" class="btn btn-success btn-lg">Kirim</button> <p>- Abaikan jika ada pesan "server tidak menanggapi", karena pesan akan tetap terkirim :D</p>
                             </div>
                         </div>
                     </form>
