--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
                         <a href="#contact">Kontak</a>
                     </li>
                     <li class="page-scroll">
-                    	<a href="https://blog.isyanation.tk">Blog</a>
+                    	<a href="/blog">Blog</a>
                     </li>
                 </ul>
             </div>
